--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<article id="tip-card">
 			<section class="bill-info">
 				<label for="bill-input">Bill</label>
-				<input id="bill-input" placeholder="0">
+				<input id="bill-input" type="number" placeholder="0">
 				<label>Select Tip %</label>
 				<div class="tip-percs">
 					<label><input id="perc-5" type="radio">5%</label>
