--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 				<input id="bill-input" type="number" placeholder="0">
 				<label>Select Tip %</label>
 				<div class="tip-percs">
-					<label><input id="perc-5" type="radio">5%</label>
-					<label><input id="perc-10" type="radio">10%</label>
-					<label><input id="perc-15" type="radio">15%</label>
-					<label><input id="perc-25" type="radio">25%</label>
-					<label><input id="perc-50" type="radio">50%</label>
+					<label><input id="perc-5" type="radio" value="5">5%</label>
+					<label><input id="perc-10" type="radio" value="10">10%</label>
+					<label><input id="perc-15" type="radio" value="15">15%</label>
+					<label><input id="perc-25" type="radio" value="25">25%</label>
+					<label><input id="perc-50" type="radio" value="50">50%</label>
 					<input id="perc-custom" type="number" placeholder="Custom">
 				</div>
 				<label>Number of People</label>
