Error message element.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<label><input id="perc-50" type="radio" value="0.5" name="perc">50%</label>
 					<input id="perc-custom" type="number" placeholder="Custom">
 				</div>
-				<label>Number of People</label>
+				<label>Number of People <span class="error-msg"></span></label>
 				<input id="num-people-input" type="number" placeholder="0">
 			</section>
 
